--- a/parseapk.ui
+++ b/parseapk.ui
@@ -54,9 +54,22 @@
     <rect>
      <x>40</x>
      <y>70</y>
-     <width>321</width>
+     <width>181</width>
      <height>151</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="pic_label">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>80</y>
+     <width>101</width>
+     <height>141</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
